Fixed background imaged on iOS by removing the paralax effect.

--- a/src/components/EconomicsAndTransparency.css
+++ b/src/components/EconomicsAndTransparency.css
@@ -1,5 +1,5 @@
 .economics-section-bg {
-	background: linear-gradient(45deg, #4361c2, #4fa49a 50%, #9dc66b 95%) no-repeat center center fixed;
+	background: linear-gradient(45deg, #4361c2, #4fa49a 50%, #9dc66b 95%) no-repeat center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
